--- a/phoneClients/android/app/src/main/res/values-ru/strings.xml
+++ b/phoneClients/android/app/src/main/res/values-ru/strings.xml
@@ -87,4 +87,5 @@
     <string name="language">Язык:</string>
     <string name="lang_en">Английский</string>
     <string name="lang_ru">Русский</string>
+    <string name="splash_logo_text">трекер</string>
 </resources>
