--- a/phoneClients/android/app/src/main/res/values/strings.xml
+++ b/phoneClients/android/app/src/main/res/values/strings.xml
@@ -87,4 +87,5 @@
     <string name="language">Language:</string>
     <string name="lang_en">English</string>
     <string name="lang_ru">Russian</string>
+    <string name="splash_logo_text">tracker</string>
 </resources>
